--- a/P3/Makefile
+++ b/P3/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-g -Wall -O -I. -DNMEDIDATIEMPO -DNDEBUG $(shell xeno-config --skin posix --cflags)
+CFLAGS=-g -Wall -O -I. -DNMEDIDATIEMPO $(shell xeno-config --skin posix --cflags)
 LDFLAGS=
 LDLIBS=-lwiringPi -lrt $(shell xeno-config --skin posix --ldflags)
 
