Mas pruebas en P3

--- a/P3/Makefile
+++ b/P3/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-g -Wall -O -I. -DNMEDIDATIEMPO $(shell xeno-config --skin posix --cflags)
 LDFLAGS=
-LDLIBS=-lwiringPi -lrt $(shell xeno-config --skin posix --ldflags)
+LDLIBS=-lwiringPi $(shell xeno-config --skin posix --ldflags)
 
 all: main
 
